# dl-44

./: .gitignore  README.md
dl44-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
dl44-app/src/: App.svelte  app.css  main.js
dl44-app/src-tauri/: Cargo.toml  tauri.conf.json
dl44-app/src-tauri/capabilities/: default.json
dl44-app/src-tauri/src/: commands.rs  lib.rs  main.rs  workspace_commands.rs
dl44-app/src-tauri/src/grbl/: controller.rs  mod.rs  protocol.rs  serial.rs  status.rs  worker.rs
dl44-app/src-tauri/src/workspace/: document.rs  import.rs  mod.rs  persistence.rs
dl44-app/src/lib/: index.ts
dl44-app/src/lib/components/: ConnectionPanel.svelte  DocumentList.svelte  ErrorToast.svelte  FrameControls.svelte  JogControls.svelte  MachinePanel.svelte  OverrideControls.svelte  StatusBar.svelte  WorkspaceCanvas.svelte  WorkspacePanel.svelte
dl44-app/src/lib/stores/: machine.ts  workspace.ts
docs/: dl44-features.md  plan.md
