[package]
name = "dl44-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "dl44_app_lib"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Serial port communication
serialport = "4.5"

# Error handling
thiserror = "2"

# Efficient synchronization primitives
parking_lot = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

[features]
custom-protocol = ["tauri/custom-protocol"]
